--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -27,7 +27,7 @@
     {{/if}}
     {{#unless error}}
    
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class=" response row row-cols-1 row-cols-md-2 g-4">
       {{#each response}}
           <div class="col">
     <div class="card h-100">
